--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 body {
 	background: #17181A;
 	font-family: "Montserrat", sans-serif;
+	overflow-x: hidden;
 }
 
 #logo {
@@ -60,6 +61,7 @@ body {
 	position: relative;
 	flex: 1;
 	flex-basis: 25rem;
+	overflow: hidden;
 }
 
 .hero-image img {
@@ -160,4 +162,5 @@ body {
 	border-radius: 50%;
 	position: absolute;
 }
+
 /*end of third video*/
