--- a/style.css
+++ b/style.css
@@ -149,10 +149,10 @@ body {
 .reveal-img, .reveal-text {
 	position: absolute;
 	width: 100%;
-	height: 100%;
+	height: 150%;
 	background: #17181A;
 	left: 0;
-	top: 0;
+	top: -15%;
 }
 
 .cursor {
@@ -164,3 +164,7 @@ body {
 }
 
 /*end of third video*/
+
+.scrollmagic-pin-spacer {
+	position: static !important;
+}
