--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 	color: white;
 	width: 80%;
 	margin: auto;
-	padding: 2rem 0rem;
+	padding: 2rem 0;
 }
 
 .line1, .line2 {
@@ -88,7 +88,7 @@ body {
 }
 
 .hero-desc p {
-	padding: 3rem 0rem;
+	padding: 3rem 0;
 	font-size: 1.5rem;
 	color: rgb(233, 233, 233);
 }
@@ -96,7 +96,6 @@ body {
 .explore {
 	padding: 1rem 2rem;
 	background: none;
-	border: none;
 	color: white;
 	border: 1px solid white;
 	font-size: 1rem;
@@ -129,7 +128,7 @@ body {
 }
 
 .nav-links h3 {
-	padding: 3rem 0rem;
+	padding: 3rem 0;
 }
 
 .contact {
@@ -138,7 +137,7 @@ body {
 
 .contact h2 {
 	font-size: 4rem;
-	padding: 2rem 0rem;
+	padding: 2rem 0;
 }
 
 .contact p {
@@ -161,6 +160,54 @@ body {
 	border: 2px solid white;
 	border-radius: 50%;
 	position: absolute;
+	transform: translate(-50%, -50%);
+	pointer-events: none;
+	transition: all 0.5s ease-in-out;
+	transition-property: background, transform;
+	transform-origin: 75% 75%;
+}
+
+.cursor.nav-active {
+	background: rgb(86, 124, 228);
+	transform: scale(3);
+}
+
+.cursor.explore-active {
+	background: white;
+	transform: scale(3);
+}
+
+.cursor-text {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	font-size: 0.5rem;
+	transform: translate(-50%, -50%);
+}
+
+.title {
+	position: relative;
+	overflow: hidden;
+}
+
+.title-swipe {
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	position: absolute;
+	mix-blend-mode: darken;
+	transform: translateY(100%);
+}
+
+.t-swipe1 {
+	background: rgb(86, 124, 228);
+}
+.t-swipe2 {
+	background: rgb(167,110,231);
+}
+.t-swipe3 {
+	background:  rgb(255, 139, 93);
 }
 
 /*end of third video*/
