--- a/style.css
+++ b/style.css
@@ -229,3 +229,70 @@ main {
 body.hide {
 	overflow: hidden;
 }
+
+/*other pages*/
+
+
+.fashion1,
+.fashion2,
+.fashion3 {
+	min-height: 90vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 70%;
+	margin: 5rem auto auto auto;
+	color: white;
+	flex-wrap: wrap;
+	position: relative;
+}
+
+.fashion-img {
+	height: 70vh;
+	flex-basis: 30rem;;
+}
+
+.fashion-text {
+	flex: 1;
+	position: relative;
+	flex-basis: 25rem;
+}
+
+.fashion-img img {
+	width: 100%;
+	height: 100%;
+	object-fit: contain;
+}
+
+.fashion-text h1 {
+	font-size: 6rem;
+	padding: 5rem 0;
+}
+
+.fashion1 h1 {
+	color: rgb(255, 139, 93);
+}
+
+.fashion2 h1 {
+	color: rgb(167, 110, 231);
+}
+
+.fashion3 h1 {
+	color: rgb(86, 124, 228);
+}
+
+.fashion-text p {
+	font-size: 2rem;
+	padding: 2rem 2rem 0 0;
+	margin-bottom: 10rem;
+}
+
+.fashion-nr {
+	font-size: 15rem;
+	position: absolute;
+	left: 50%;
+	bottom: 10%;
+	color: white;
+	opacity: 0.2;
+}
+
